# asimtools

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  Building_docs.md  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.html  README.md  asimplify.html  asimtools.asimmodules.active_learning.html  asimtools.asimmodules.ase_md.html  asimtools.asimmodules.benchmarking.html  asimtools.asimmodules.data.html  asimtools.asimmodules.elastic_constants.html  asimtools.asimmodules.eos.html  asimtools.asimmodules.geometry_optimization.html  asimtools.asimmodules.html  asimtools.asimmodules.lammps.html  asimtools.asimmodules.mace.html  asimtools.asimmodules.phonons.html  asimtools.asimmodules.phonopy.html  asimtools.asimmodules.surface_energies.html  asimtools.asimmodules.transformations.html  asimtools.asimmodules.vacancy_formation_energy.html  asimtools.asimmodules.vasp.html  asimtools.asimmodules.workflows.html  asimtools.html  genindex.html  include_changelog.html  include_contributing.html  include_readme.html  index.html  modules.html  objects.inv  paper.bib  paper.md  py-modindex.html  (+9 more)
.doctrees/: CONTRIBUTING.doctree  README.doctree  asimplify.doctree  asimtools.asimmodules.active_learning.doctree  asimtools.asimmodules.ase_md.doctree  asimtools.asimmodules.benchmarking.doctree  asimtools.asimmodules.data.doctree  asimtools.asimmodules.doctree  asimtools.asimmodules.elastic_constants.doctree  asimtools.asimmodules.eos.doctree  asimtools.asimmodules.geometry_optimization.doctree  asimtools.asimmodules.lammps.doctree  asimtools.asimmodules.mace.doctree  asimtools.asimmodules.phonons.doctree  asimtools.asimmodules.phonopy.doctree  asimtools.asimmodules.surface_energies.doctree  asimtools.asimmodules.transformations.doctree  asimtools.asimmodules.vacancy_formation_energy.doctree  asimtools.asimmodules.vasp.doctree  asimtools.asimmodules.workflows.doctree  asimtools.doctree  environment.pickle  include_contributing.doctree  include_readme.doctree  index.doctree  modules.doctree  usage.doctree  workflows.doctree
_build/: README.html  asimplify.html  asimtools.asimmodules.geometry_optimization.html  asimtools.asimmodules.html  genindex.html  include_contributing.html  include_readme.html  index.html  searchindex.js  workflows.html
_modules/: index.html
_sources/: README.md.txt  asimplify.rst.txt  asimtools.asimmodules.lammps.rst.txt  asimtools.asimmodules.rst.txt  index.rst.txt
asimtools/: _version.py  calculators.py  job.py  job_old.py  utils.py
docs/: .buildinfo  CONTRIBUTING.html  Makefile  README.html  asimplify.html  asimplify.rst  asimtools.asimmodules.active_learning.rst  asimtools.asimmodules.ase_md.rst  asimtools.asimmodules.benchmarking.html  asimtools.asimmodules.data.rst  asimtools.asimmodules.html  (+39 more)
(+1061 files in other folders)
